# geo_content

./: .env.example  .gitignore  CLOUDFLARE_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  GEO_ACTION_QUICK_START.md  GEO_ACTION_REWRITE_GUIDE.md  GEO_ACTION_USER_GUIDE.md  GEO_Content_Platform_PRD_v3.2.md  GEO_INSIGHTS_SUMMARY.md  README.md  pyproject.toml
deploy/: deploy-frontend.sh  deploy.sh  ec2-setup.sh  geo-content.service  nginx.conf  setup-cloudflared.sh  update-backend-cors.sh
examples/: sample_generation.py
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/hooks/: useContentGeneration.ts  useContentRewrite.ts  useJobPolling.ts  useLanguages.ts  useRewriteJobPolling.ts
frontend/src/pages/: Generate.tsx  Rewrite.tsx
frontend/src/utils/: formatters.ts  logger.ts
src/geo_content/: __init__.py  config.py  db.py  main.py
src/geo_content/agents/: __init__.py  base.py  evaluator_agent.py  orchestrator.py  research_agent.py  rewrite_orchestrator.py  rewriter_agent.py  writer_agent_a.py  writer_agent_b.py
src/geo_content/api/: __init__.py  dependencies.py  exceptions.py  routes.py
src/geo_content/models/: __init__.py  evaluation.py  geo_commentary.py  geo_insights.py  rewrite_schemas.py  schemas.py
src/geo_content/pipeline/: __init__.py  pathway_harvester.py
src/geo_content/prompts/: __init__.py  commentary.py  evaluator.py  geo_rewriter.py  geo_writer.py  language_specific.py
src/geo_content/tools/: __init__.py  document_parser.py  format_exporters.py  geo_analyzers.py  language_detector.py  (+4 more)
tests/: __init__.py  conftest.py  test_api.py  test_language_detection.py
(+11 files in other folders)
